--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,6 +10,14 @@
    </head>
 
    <body>
+      <nav>
+         <ul>
+            <li id="to-right">
+               <a href="/signup">Sign up</a>
+               <a href="/login">Login</a> 
+            </li>
+         </ul>
+      </nav>
 
       {{{body}}}
 
