--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,6 +15,7 @@
             <li id="to-right">
                <a href="/signup">Sign up</a>
                <a href="/login">Login</a> 
+               <a href="/logout">Logout</a>
             </li>
          </ul>
       </nav>
