--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -15,7 +15,7 @@
     </label>
 
     <label> Country
-      <select name="country">
+      <select id="country" name="country">
         {{#each country}}
           <option value="{{this.value}}">{{this.name}}</option>
         {{/each}}
