try fix bugs country and avatar

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -23,7 +23,9 @@
     </label>
 
     <label> Avatar
-        <input type="file" name="avatar" placeholder="Favorite Artists" />
+        {{#each avatar}}
+        <img src="{{this.src}}" alt="{{this.name}}">
+        {{/each}}
     </label>
 
     <button type="submit">SIGN UP</button>
