--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,6 +16,7 @@
                <a href="/signup">Sign up</a>
                <a href="/login">Login</a> 
                <a href="/logout">Logout</a>
+               <a href="/profile">Profile</a>
             </li>
          </ul>
       </nav>
