--- a/views/events/search.hbs
+++ b/views/events/search.hbs
@@ -1,1 +1,22 @@
 <h2>Search</h2>
+<form action="/search" method="POST" class="d-flex">
+    <input class="form-control me-2" name="search" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-light" type="submit">Search</button>
+</form>
+
+<br><br><br><br><br><br><br>
+
+<div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="..." class="img-fluid rounded-start" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+  </div>
+</div>
