--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -2,7 +2,7 @@
 
 {{#if user}}
   <h2>Welcome, {{ user.username }}!</h2>
-  <h3>Country</h3>
+  <h3>Country: {{user.country}}</h3> {{!-- mostrar ao utilizador o nome do pais não o countryCode --}}
   <h5>Favorite artist: {{user.favoriteArtist}}</h5>
   <img src="{{user.avatar}}">
   {{#each user.list}}
