--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,6 +18,7 @@
                <a href="/login">Login</a> 
                <a href="/logout">Logout</a>
                <a href="/profile">Profile</a>
+               <a href="/search">Search</a>
             </li>
          </ul>
       </nav>
