--- a/views/events/search.hbs
+++ b/views/events/search.hbs
@@ -1,26 +1,34 @@
 <h2>Search</h2>
 <form action="/search" method="POST" class="d-flex">
-    <input class="form-control me-2" name="search" type="search" placeholder="Search" aria-label="Search">
+    <input class="form-control me-2" name="search" type="search" placeholder="Search for event/team/band/concert" aria-label="Search">
     <button class="btn btn-light" type="submit">Search</button>
 </form>
+    {{#if errorMessage}}
+      <p class="error">{{errorMessage}}</p>
+    {{/if}}
 
 <br><br><br><br><br><br><br>
+<div class="row row-cols-1 row-cols-md-2 g-4">
 {{#each cleanData}}
-<div class="card mb-3" style="max-width: 540px;">
-  <div class="row g-0">  
-    <div class="col-md-4">
-      <img src={{this.srcImage}} class="img-fluid rounded-start">
-    </div>
-    <div class="col-md-8">
+  <div class="col">
+    <div class="card">
+      <img src={{this.srcImage}} class="card-img-top" style="height: 50vh;object-fit: cover;"> {{!-- Ver tamanhos da imagem --}}
       <div class="card-body">
         <h5 class="card-title">{{this.name}}</h5>
-        <p class="card-text">{{this.url}}</p>
-        <p class="card-text"><small class="text-muted">{{this.locale}}</small></p>
-        <form action="/detailevents" method="POST">
-        <button type="button" class="btn btn-ligth">More</button>
-        </form>
+        {{#with this._embedded}}
+        <p class="card-text">Local: {{venues.0.name}}</p>
+        <p class="card-text">City: {{venues.0.city.name}}</p>
+        <p class="card-text">Country: {{venues.0.country.name}}, {{venues.0.country.countryCode}}</p>
+        {{/with}}
+        {{#with this.dates}}
+        <p class="card-text"><small class="text-muted">Data: {{start.localDate}}</small></p>
+        {{/with}}
+        <a href={{this.url}}  class="card-text" target="_blank" >Buy your Ticket's here</a>
+        <br>
+        <a href="/detailevents/{{this.id}}" class="btn btn-ligth">More Details</a>
+        <a href="/profile/{{this.id}}" class="btn btn-ligth">Add to your list</a>
       </div>
-    </div>
-  </div>
+</div>
 </div>
 {{/each}}
+</div>
