--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -2,33 +2,34 @@
   <h2>SIGN UP</h2>
   <form action="/signup" method="POST">
  
-    <label> Username
-        <input type="text" name="username" placeholder="Username" />
+    <label class="form-label"> Username
+        <input class="form-control" type="text" name="username" placeholder="Username" />
     </label>
 
-    <label> Password
-      <input type="password" name="password" placeholder="********" />
+    <label class="form-label"> Password
+      <input class="form-control" type="password" name="password" placeholder="********" />
     </label>
 
-    <label> Favorite Artists
-        <input type="text" name="favoriteArtist" placeholder="Favorite Artists" />
+    <label class="form-label"> Favorite Artists
+        <input class="form-control" type="text" name="favoriteArtist" placeholder="Favorite Artists" />
     </label>
 
-    <label> Country
-      <select id="country" name="country">
+    <label class="form-label"> Country
+      <select id="country" class="form-select" name="country">
+        <option selected >Open this select menu</option>
         {{#each country}}
           <option value="{{this.value}}">{{this.name}}</option>
         {{/each}}
       </select>
     </label>
 
-    <label> Avatar
+    <label class="form-label"> Avatar
         {{#each avatar}}
-        <img class="avatar" id="{{this.src}}" src="{{this.src}}" alt="{{this.name}}">
+        <img style="height: 80px;" class="avatar" id="{{this.src}}" src="{{this.src}}" alt="{{this.name}}">
         {{/each}}
     </label>
     <input id="avatarInput" type="hidden" value="av1" name="avatar">
-    <button type="submit">SIGN UP</button>
+    <button class="btn btn-light mb-3" type="submit">SIGN UP</button>
  
     {{#if errorMessage}}
       <p class="error">{{errorMessage}}</p>
