--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,18 +11,37 @@
    </head>
 
    <body>
-      <nav>
-         <ul>
-            <li id="to-right">
-               <a href="/signup">Sign up</a>
-               <a href="/login">Login</a> 
-               <a href="/logout">Logout</a>
-               <a href="/profile">Profile</a>
-               <a href="/search">Search</a>
-            </li>
-         </ul>
-      </nav>
-
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+   <div class="container-fluid">
+      <p class="navbar-brand" >
+         <img src="images/eventree-icon.png" alt="" height="35" class="d-inline-block align-text-top">
+      {{appTitle}}
+      </p>
+   </div>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/signup">Sign up</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/login">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/profile">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/search">Search</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
       {{{body}}}
 
       <script src="/js/script.js"></script>
