--- a/views/events/search.hbs
+++ b/views/events/search.hbs
@@ -24,7 +24,7 @@
         <a href={{this.url}}  class="btn btn-warning" target="_blank" >Buy your Ticket's here</a>
         <br>
         <a href="/detailevents/{{this.id}}" class="btn btn-ligth">More Details</a>
-        <a href="/eventadded/{{this.id}}" class="btn btn-dark">Add to your list</a>
+        <a href="/profile/{{this.id}}/add" class="btn btn-dark">Add to your list</a>
       </div>
 </div>
 </div>
