--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,11 +13,11 @@
    <body>
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
    <div class="container-fluid">
-      <p class="navbar-brand" >
-         <img src="images/eventree-icon.png" alt="" height="35" class="d-inline-block align-text-top">
-      {{appTitle}}
-      </p>
-   </div>
+      <img src="images/eventree-icon.png" alt="" height="35" class="d-inline-block align-text-top">
+      <span class="navbar-brand mb-0 h1">{{appTitle}}</span>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
@@ -39,7 +39,7 @@
           <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
         </li>
       </ul>
-    </div>
+      </div>
   </div>
 </nav>
       {{{body}}}
