update image default

--- a/views/events/detailprivate.hbs
+++ b/views/events/detailprivate.hbs
@@ -1,7 +1,5 @@
-<h3>Detail Private Events</h3>
-
 {{#each data}}
-    <img src={{this.img}} >
+    <img src={{this.img}} class="img-fluid">
     <h5>Name: {{this.name}}</h5>
     <p>{{this.info}}</p>
     <p>Date: {{this.date}}</p>
