--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -31,7 +31,9 @@
   allAvatar.forEach((elem, index) => {
     const avatarSrc = elem.id;
     elem.addEventListener("click", () => {
-      document.getElementById("avatarInput").value = avatarSrc;
-    })
+        document.getElementById("avatarInput").value = avatarSrc;
+    });
+      document.getElementById(avatarSrc).style.border= "1px solid black";
+
   })
 </script>
