--- a/views/events/detailprivate.hbs
+++ b/views/events/detailprivate.hbs
@@ -3,5 +3,7 @@
     <h5>Name: {{this.name}}</h5>
     <p>{{this.info}}</p>
     <p>Date: {{this.date}}</p>
+    <a href="/editevent/{{this._id}}" class="btn btn-dark">edit</a>
     <a href="/profile/{{this._id}}/delete" class="btn btn-dark">Remove</a>
 {{/each}}
+
