--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -11,7 +11,7 @@
       <h5 class="card-title">{{this.name}}</h5>
       <p class="card-text">{{this.date}}</p>
       <a href="/detailprivate/{{this._id}}" class="btn btn-dark">More Details</a>
-      <a href="/profile/{{this._id}}/edit" class="btn btn-dark">Edit</a>
+      <a href="/editevent/{{this._id}}" class="btn btn-dark">Edit</a>
       <a href="/profile/{{this._id}}/delete" class="btn btn-dark">Remove</a>
     </div>
   </div>
