--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,1 @@
-<h2>Home Page</h2>
+<img src="/images/eventree-logo-white-02.png" alt="Eventree logo" id="homepageImg" class = "slide-in-bck-center">
