--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,20 +1,22 @@
-<div id="form">
-  <h2>Login</h2>
- 
-  <form action="/login" method="POST">
+<div id="divLogIn" class="container">
+  <h2 id="h2LI">Login</h2>
+
+
+  <form id="formLI" action="/login" method="POST">
  
     <label class="form-label"> Username
-      <input class="form-control" type="text" name="username"/>
+      <input class="form-control" type="text" name="username" placeholder="Username"/>
     </label>
  
     <label class="form-label">Password
       <input class="form-control" type="password" name="password" placeholder="********" />
     </label>
  
-    <button class="btn btn-light" type="submit">Login</button>
+    <button id="logInBtn" class="btn" type="submit">LOGIN</button>
  
     {{#if errorMessage}}
       <p class="error">{{errorMessage}}</p>
     {{/if}}
   </form>
+  
 </div>
