--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,44 +1,65 @@
-<div id="form">
-  <h2>SIGN UP</h2>
-  <form action="/signup" method="POST">
- 
+<div id="divSignUp" class="container">
+
+  <h2 id="h2SU">SIGN UP</h2>
+
+<div class="row row-cols-2">
+  
+<form action="/signup" method="POST" id="formSignUp">
+
+    
+<div class="col">
     <label class="form-label"> Username
         <input class="form-control" type="text" name="username" placeholder="Username" />
     </label>
+</div>
 
+<div class="col">
     <label class="form-label"> Password
       <input class="form-control" type="password" name="password" placeholder="********" />
     </label>
+</div>
+
+<div class="col">
 
     <label class="form-label"> Favorite Artists
         <input class="form-control" type="text" name="favoriteArtist" placeholder="Favorite Artists" />
     </label>
+</div>
 
+<div class="col">
     <label class="form-label"> Country
       <select id="country" class="form-select" name="country">
-        <option selected >Open this select menu</option>
+        <option selected >Select your country</option>
         {{#each country}}
           <option value="{{this.value}}">{{this.name}}</option>
         {{/each}}
       </select>
     </label>
+</div>
 
+<div class="col">
     <label class="form-label"> Avatar
+    <br>
         {{#each avatar}}
         {{!-- Alterar o estilo das imagens no CSS --}}
         <img style="height: 80px;" class="avatar" id="{{this.src}}" src="{{this.src}}" alt="{{this.name}}">
         {{/each}}
     </label>
     <input id="avatarInput" type="hidden" value="av1" name="avatar">
-    
-    <button class="btn btn-light mb-3" type="submit">SIGN UP</button>
+    </div>
+    <button id = "signupBtn" class="btn mb-3" type="submit">SIGN UP</button>
  
     {{#if errorMessage}}
       <p class="error">{{errorMessage}}</p>
     {{/if}}
     
   </form>
+  </div>
 </div>
+
+
+
+
 <script>
   const allAvatar = [...document.querySelectorAll(".avatar")];
   allAvatar.forEach((elem, index) => {
