--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -1,17 +1,22 @@
+<div id="divProfile" class="container"></div>
+<div id="divInfo">
 {{#if currentUser}}
-  <h2>Welcome, {{ currentUser.username }}!</h2>
-  <h3>Country: {{currentUser.country}}</h3> {{!-- mostrar ao utilizador o nome do pais não o countryCode --}}
-  <h5>Favorite artist: {{currentUser.favoriteArtist}}</h5>
+  <h2 id="h2Pr">Welcome, {{ currentUser.username }}!</h2>
+  <h3 id="h3Pr">Country: {{currentUser.country}}</h3> {{!-- mostrar ao utilizador o nome do pais não o countryCode --}}
+  <h5 id="h5Pr">Favorite artist: {{currentUser.favoriteArtist}}</h5>
   <img style="height: 80px;" src="{{currentUser.avatar}}">
+</div>
+
+
   {{#each currentUser.list}}
   <div class="card bg-dark text-white">
     {{!-- Alterar o estilo das imagens no CSS --}}
     <img src={{this.img}} class="card-img" alt="{{this.name}}" style="height: 30vh; object-fit: cover;">
     <div class="card-img-overlay">
-      <h5 class="card-title">{{this.name}}</h5>
-      <p class="card-text">{{this.date}}</p>
-      <a href="/detailevents/{{this.eventId}}" class="btn btn-dark">More Details</a>
-      <a href="/profile/{{this._id}}/delete" class="btn btn-dark">Delete</a>
+      <h5 class="card-title" id="list-name">{{this.name}}</h5>
+      <p class="card-text" id="list-date">{{this.date}}</p>
+      <a href="/detailevents/{{this.eventId}}" class="btn detBtn">More Details</a>
+      <a href="/profile/{{this._id}}/delete" class="btn detBtn">Delete</a>
     </div>
   </div>
   <br><br><br>
@@ -19,3 +24,5 @@
 {{else}}
   <p>Still no logged in user, sorry!</p>
 {{/if}}
+
+</div>
