--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,6 +1,6 @@
-<div id="divSignUp" class="container">
+<div id="divSignUp">
 
-  <h2 id="h2SU">SIGN UP</h2>
+<h2 id="h2SU">SIGN UP</h2>
 
 <div class="row row-cols-2">
   
@@ -64,7 +64,7 @@
     <button id = "signupBtn" class="btn mb-3" type="submit">SIGN UP</button>
  
     <br>
-    <button class="btn btn-light mb-3" type="submit">SIGN UP</button>
+    
     {{#if errorMessage}}
       <p class="error">{{errorMessage}}</p>
     {{/if}}
