--- a/views/events/detailevents.hbs
+++ b/views/events/detailevents.hbs
@@ -23,22 +23,26 @@
 {{#with this._embedded.attractions.0.externalLinks}}
     {{#if this.youtube.0.url}}
     <h5>
-    <a class="link fa fa-youtube" href={{this.youtube.0.url}} target="_blank">Youtube</a>
+        <p class=" link fa fa-youtube"></p>
+    <a class="link" href={{this.youtube.0.url}} target="_blank">Youtube</a>
     </h5>
     {{/if}}
     {{#if this.twitter.0.url}}
     <h5>
-    <a class="link fa fa-twitter" href={{this.twitter.0.url}} target="_blank">Twitter</a>
+    <p class=" link fa fa-twitter"></p>
+    <a class="link" href={{this.twitter.0.url}} target="_blank">Twitter</a>
     </h5>
     {{/if}}
     {{#if this.spotify.0.url}}
     <h5>
-    <a class="link fa fa-spotify" href={{this.spotify.0.url}} target="_blank">Spotify</a>
+    <p class=" link fa fa-spotify"></p>
+    <a class="link " href={{this.spotify.0.url}} target="_blank">Spotify</a>
     </h5>
     {{/if}}
     {{#if this.instagram.0.url}}
     <h5>
-    <a class="link fa fa-instagram" href={{this.instagram.0.url}} target="_blank">Instagram</a>
+    <p class=" link fa fa-instagram"></p>
+    <a class="link" href={{this.instagram.0.url}} target="_blank">Instagram</a>
     </h5>
     {{/if}}
     {{#if this.homepage.0.url}}
