--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,26 +6,26 @@ body {
   
 /*HOMEPAGE*/
 
-
 #homepageImg {
   width:30%;
   height: 20%;
   margin-top: 15%;
   margin-left: 35%;
-  margin: 0;
-  padding: 0px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-@keyframes slide-in-bck-center{0%{transform:translateZ(600px);opacity:0}100%{transform:translateZ(0);opacity:1}}
+@keyframes slide-in-bck-center{
+  0%{transform:translateZ(600px);opacity:0}100%{transform:translateZ(0);opacity:1}
+}
 
-.slide-in-bck-center{animation:slide-in-bck-center 6s cubic-bezier(.25,.46,.45,.94) both}
+.slide-in-bck-center{
+  animation:slide-in-bck-center 6s cubic-bezier(.25,.46,.45,.94) both;
+}
 
 /*SING UP*/
 
 #divSignUp {
   display: flex !important;
-  justify-content: center !important;
+  justify-content: center !important; 
   
 }
 
@@ -174,6 +174,7 @@ body {
 .link{
   text-decoration: none;
   color: white;
+  
 }
 
 /*SEARCH RESULTS*/
