--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,26 +1,18 @@
 <div id="divSignUp">
-
 <h2 id="h2SU">SIGN UP</h2>
-
-<div class="row row-cols-2">
-  
-<form action="/signup" method="POST" id="formSignUp">
-
-    
+<div class="row row-cols-2"> 
+<form action="/signup" method="POST" id="formSignUp"> 
 <div class="col">
     <label class="form-label"> Username
         <input class="form-control" type="text" name="username" placeholder="Username" />
     </label>
 </div>
-
 <div class="col">
     <label class="form-label"> Password
       <input class="form-control" type="password" name="password" placeholder="********" />
     </label>
 </div>
-
 <div class="col">
-
     <label class="form-label"> Favorite Artists
         <input class="form-control" type="text" name="favoriteArtist" placeholder="Favorite Artists" />
     </label>
@@ -38,42 +30,17 @@
 </div>
 
 <div class="col">
-    <label class="form-label"> Avatar
-<div id="form">
-  <h2>SIGN UP</h2>
-  <form action="/signup" method="POST">
-    <input class="form-control" type="text" name="username" placeholder="Username" />
-    <input class="form-control" type="password" name="password" placeholder="********" />
-    <input class="form-control" type="text" name="favoriteArtist" placeholder="Favorite Artists" />
-    <select id="country" class="form-select" name="country">
-      <option selected >Select Country</option>
-        {{#each country}}
-          <option value="{{this.value}}">{{this.name}}</option>
-        {{/each}}
-    </select>
-    <br>
-    <label class="form-label"> Select Avatar</label>
+    <label class="form-label"> Avatar </label>
     <br>
         {{#each avatar}}
         {{!-- Alterar o estilo das imagens no CSS --}}
-        <img style="height: 80px;" class="avatar" id="{{this.src}}" src="{{this.src}}" alt="{{this.name}}">
+        <img style="height: 80px; border-radius: 50%;" class="avatar" id="{{this.src}}" src="{{this.src}}" alt="{{this.name}}">
         {{/each}}
-
-    <input id="avatarInput" type="hidden" value="av1" name="avatar">
-    </div>
-    <button id = "signupBtn" class="btn mb-3" type="submit">SIGN UP</button>
- 
-    <br>
-    
+        <input id="avatarInput" type="hidden" value="av1" name="avatar">
     {{#if errorMessage}}
       <p class="error">{{errorMessage}}</p>
     {{/if}}
-  </form>
-  </div>
 </div>
-
-
-
 
 <script>
   const allAvatar = [...document.querySelectorAll(".avatar")];
@@ -84,7 +51,7 @@
         allAvatar.forEach((elem) => {
           elem.style.border="none";
         })
-        document.getElementById(avatarSrc).style.border= "1px solid black";
+        document.getElementById(avatarSrc).style.border= "2px solid white";
     });
       
 
