--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -33,6 +33,9 @@
           <a class="nav-link active" aria-current="page" href="/profile">Profile</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/addevent">Add Event</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/search">Search</a>
         </li>
         <li class="nav-item">
