--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -29,6 +29,7 @@
          <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/login">Login</a>
         </li>
+        {{#if session.user}}
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/profile">Profile</a>
         </li>
@@ -41,6 +42,7 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
         </li>
+        {{/if}}
       </ul>
       </div>
   </div>
