--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,6 +20,7 @@
       </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        {{#unless login}}
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
@@ -29,7 +30,8 @@
          <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/login">Login</a>
         </li>
-        {{#if session.user}}
+        {{/unless}}
+        {{#if login}}
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/profile">Profile</a>
         </li>
