--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -4,7 +4,7 @@
   <h2 id="h2Pr">Welcome, {{ currentUser.username }}!</h2>
   <h3 id="h3Pr">Country: {{currentUser.country}}</h3> {{!-- mostrar ao utilizador o nome do pais não o countryCode --}}
   <h5 id="h5Pr">Favorite artist: {{currentUser.favoriteArtist}}</h5>
-  <img style="height: 80px; border-radius: 50%; border: 2px solid white;" src="{{currentUser.avatar}}">
+  <img class="avatarImg" src="{{currentUser.avatar}}">
 </div>
 
 
