--- a/views/events/search.hbs
+++ b/views/events/search.hbs
@@ -1,7 +1,7 @@
 <h2 id="h2S">Search</h2>
 
 <form action="/search" method="POST" class="d-flex">
-    <input class="form-control me-2" name="search" type="search" placeholder="Search for an event" aria-label="Search">
+    <input id="searchBar" class="form-control me-2" name="search" type="search" placeholder="Search for an event" aria-label="Search">
     <button class="btn searchBt" type="submit">Search</button>
 </form>
 
