--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,32 +1,26 @@
 <div id="divSignUp">
 <h2 id="h2SU">SIGN UP</h2>
-<div class="row row-cols-2"> 
+<div id="suFlex" class="row row-cols-2"> 
 <form action="/signup" method="POST" id="formSignUp"> 
 <div class="col">
-    <label class="form-label"> Username
         <input class="form-control" type="text" name="username" placeholder="Username" />
-    </label>
 </div>
 <div class="col">
-    <label class="form-label"> Password
-      <input class="form-control" type="password" name="password" placeholder="********" />
-    </label>
+<input class="form-control" type="password" name="password" placeholder="********" />
+    
 </div>
 <div class="col">
-    <label class="form-label"> Favorite Artists
-        <input class="form-control" type="text" name="favoriteArtist" placeholder="Favorite Artists" />
-    </label>
+    
+<input class="form-control" type="text" name="favoriteArtist" placeholder="Favorite Artists" />
 </div>
 
 <div class="col">
-    <label class="form-label"> Country
-      <select id="country" class="form-select" name="country">
-        <option selected >Select your country</option>
-        {{#each country}}
-          <option value="{{this.value}}">{{this.name}}</option>
-        {{/each}}
-      </select>
-    </label>
+<select id="country" class="form-select" name="country">
+<option selected >Select your country</option>
+   {{#each country}}
+    <option value="{{this.value}}">{{this.name}}</option>
+    {{/each}}
+   </select>
 </div>
 
 <div class="col">
@@ -37,6 +31,12 @@
         <img style="height: 80px; border-radius: 50%;" class="avatar" id="{{this.src}}" src="{{this.src}}" alt="{{this.name}}">
         {{/each}}
         <input id="avatarInput" type="hidden" value="av1" name="avatar">
+
+        <input id="avatarInput" type="hidden" value="av1" name="avatar">
+    </div>
+    
+    <button id = "signupBtn" class="btn mb-3" type="submit">SIGN UP</button>
+
     {{#if errorMessage}}
       <p class="error">{{errorMessage}}</p>
     {{/if}}
