--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,2 +1,9 @@
-<h1>Error!</h1>
-<h2>There was an error on the server! Check the console!</h2>
+
+<div id="divError">
+
+    <h1 id="hError">Error!</h1>
+
+    <p id="pError">Something went wrong... Try again later!</p>
+
+</div>
+
