--- a/views/not-found.hbs
+++ b/views/not-found.hbs
@@ -1,3 +1,7 @@
-<h1>404 Error</h1>
-<h2>This route does not exist on the app! Check if everything is ok! Check your routes to see what might have happened
-</h2>
+<div id="divError">
+
+    <h1 id="hError">404 Error</h1>
+
+    <p id="pError">Something went wrong... Try again later!</p>
+
+</div>
