--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,10 +7,9 @@ body {
 /*HOMEPAGE*/
 
 #homepageImg {
-  width:30%;
-  height: 20%;
-  margin-top: 20%;
-  margin-left: 35%;
+  width:70%;
+  margin-top: 15%;
+  margin-left: 15%;
 }
 
 @keyframes slide-in-bck-center{
@@ -18,7 +17,7 @@ body {
 }
 
 .slide-in-bck-center{
-  animation:slide-in-bck-center 6s cubic-bezier(.25,.46,.45,.94) both;
+  animation:slide-in-bck-center 3s cubic-bezier(.25,.46,.45,.94) both;
 }
 
 .btn:hover {
@@ -29,6 +28,8 @@ body {
 .error{
   color: white;
   font-size: 1em;
+  margin-top: 5%;
+  margin-left: 19%;
 }
 
 #divError{
@@ -145,6 +146,11 @@ body {
 
 /*Profile*/
 
+#userInfo{
+  display: flex;
+  flex-direction: row;
+}
+
 #divProfile{
   display: flex !important;
   flex-direction: column;
@@ -155,11 +161,19 @@ body {
   margin-top: 2%;
   margin-bottom: 3%;
   font-size: 3em;
+  justify-content: start;
+}
+
+#profAvatar{
+  justify-content: end;
+  margin-top: 2%;
+  margin-left: 50%;
 }
 
 .parProf{
   color: white;
   font-size: 1.5em;
+  margin-top: -1%;
 }
 
 .card {
@@ -170,7 +184,7 @@ body {
   background-color: #0F2027;
   border-color: #0F2027;
   color: white;
-  margin-top: 5%;
+  margin-top: 6%;
 }
 
 #list-date{
@@ -185,7 +199,7 @@ body {
 
 /*DETAILS*/
 
-.h3D{
+#h3D{
   color: white;
   margin-top: 1%;
   font-size: 2em;
@@ -211,14 +225,16 @@ body {
 
 #detImg{
   margin-top: 1%;
-  height: 40vh; 
+  width: 50%;
   object-fit: cover;
+  margin-left: 25%;
 }
 
 .description{
   text-align: justify;
   font-style: italic;
   color: white;
+  width: 95%;
 }
 
 .link{
@@ -227,13 +243,24 @@ body {
   
 }
 
+#socialMedia{
+  display: flex;
+  width: 95%;
+  justify-content: space-between;
+}
+
 /*SEARCH*/
+#searchBar {
+  justify-content: center;
+}
 
 #h2S{
   color: white;
-  margin-top: 1%;
+  margin-top: 3%;
   margin-left: 5%;
   font-size: 50px;
+  display: flex;
+  justify-content: center;
 }
 
 #searchBar{
@@ -244,7 +271,8 @@ body {
   background-color: #0F2027;
   border-color: #0F2027;
   color: white;
-  height: 1%;
+  height: 3.5%;
+  margin-top: 2%;
 }
 
 #box{
@@ -278,3 +306,29 @@ body {
   border: 2px solid white;
 }
 
+/* add Event */
+
+#addEvent{
+  margin-top: 1%;
+  margin-left: 27%;
+}
+
+#createBtn{
+  margin-left: 29%;
+}
+
+/* edit Event */
+
+#btnEdit{
+  margin-left: 25%;
+}
+
+
+#detailsInfo{
+  margin-left: 5%;
+}
+
+#erroSearch{
+  margin-top: 1%;
+  margin-left: 31%;
+}
