--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -18,7 +18,7 @@
       <select id="country" class="form-select" name="country">
         <option>Select your country</option>
         {{#each countryCode}}
-          <option value="{{this.value}}">{{this.name}}</option>
+          <option value="{{this.name}}">{{this.name}}</option>
         {{/each}}
       </select>
 </div>
@@ -31,14 +31,12 @@
         <img style="height: 80px; border-radius: 50%;" class="avatar" id="{{this.src}}" src="{{this.src}}" alt="{{this.name}}">
         {{/each}}
         <input id="avatarInput" type="hidden" value="av1" name="avatar">
-
-        <input id="avatarInput" type="hidden" value="av1" name="avatar">
     </div>
     
     <button id = "signupBtn" class="btn mb-3" type="submit">SIGN UP</button>
 
     {{#if errorMessage}}
-      <p>{{errorMessage}}</p>
+      <p class="error">{{errorMessage}}</p>
     {{/if}}
 </div>
 
