--- a/views/events/addevent.hbs
+++ b/views/events/addevent.hbs
@@ -1,8 +1,8 @@
-<h3>Add Private Evente!</h3>
-<form action="/addevent" method="POST">
+<h3 id="h2S">Add Private Event!</h3>
+<form action="/addevent" method="POST" id="addEvent">
     <input class="form-control" type="text" name="name" placeholder="Event Name"/>
     <input class="form-control" type="text" name="img" placeholder="Event URL Image"/>
     <input class="form-control" type="text" name="info" placeholder="Event Information"/>
     <input class="form-control" type="date" name="date"/>
-    <button class="btn btn-light mb-3" type="submit">Create Event</button>
+    <button class="btn detBtn" type="submit" id="createBtn">Create Event</button>
 </form>
