--- a/views/events/search.hbs
+++ b/views/events/search.hbs
@@ -1,12 +1,12 @@
 <h2 id="h2S">Search</h2>
 
-<form action="/search" method="POST" class="d-flex">
+<form id="searchBar" action="/search" method="POST" class="d-flex">
     <input id="searchBar" class="form-control me-2" name="search" type="search" placeholder="Search for an event" aria-label="Search">
     <button class="btn searchBt" type="submit">Search</button>
 </form>
 
     {{#if errorMessage}}
-      <p class="error">{{errorMessage}}</p>
+      <p class="error"id="erroSearch">{{errorMessage}}</p>
     {{/if}}
 
 
